log/build_2026-02-03_21-00-10/aurora_gps/stderr.log
  File "/home/aurora/aurora_sim_v2/install/aurora_gps/lib/python3.10/site-packages/aurora_gps/aurora_gps.py", line 27
    self.timer = self.create_timer(0.1, self.gps_callback)
    ^^^^
SyntaxError: expected 'except' or 'finally' block

